<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/loginPage"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="0.005"
        android:padding="10dp"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="0.005"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />




    <Button
        android:id="@+id/loginBT"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_text_login"
        android:textSize="20sp"
        android:textColor="#2196F3" />



    <Button
        android:id="@+id/cancelBT"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_text_cancel"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:gravity="center"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>